# clipboard_manager

./: .gitignore  Cargo.toml  README.md  app.manifest  app.rc  build.rs  generate_icon.ps1
src/: main.rs
